# TutorialMaker

./: .gitignore  CMakeLists.txt
TutorialMaker/: CMakeLists.txt  TutorialMaker.py
TutorialMaker/Resources/UI/: TutorialMaker.ui
